--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,43 @@
         <item>Phantasm</item>
     </string-array>
 
+    <!--BottomNavigationMenu-->
+    <string name="bottomNavigation_explore">Explore</string>
+    <string name="bottomNavigation_map">Map</string>
+    <string name="bottomNavigation_settings">Settings</string>
+
+    <string name="popup_delete">Delete</string>
+
+    <!--MainFragment-->
+    <string name="contentDescription_main_image_AR">Image AR</string>
+    <string name="text_main_questions_amount">Questions amounts:</string>
+    <string name="text_main_questions_amount_inNumbers">1</string>
+    <string name="text_main_category">Category</string>
+    <string name="text_main_difficulty">Difficulty</string>
+    <string name="button_main_start">Start</string>
+    <string name="textTitle_main_quiz">Quiz</string>
+    <string name="textTitle_main_history">History</string>
+    <string name="textTitle_main_settings">Settings</string>
+
+    <!--HistoryFragment-->
+    <string name="text_history_category">Category:</string>
+    <string name="text_history_correct_answers">Correct answers:</string>
+    <string name="text_history_difficulty">Difficulty:</string>
+    <string name="contentDescription_history_icon_menu_three_dots_horizontal">Icon menu</string>
+
+    <!--SettingsFragment-->
+    <string name="text_settings_share_this_app">Share this app</string>
+    <string name="text_settings_rate_us">Rate us</string>
+    <string name="text_settings_leave_feedback">Leave feedback</string>
+    <string name="text_settings_clear_history">Clear history</string>
+
+    <!--QuizActivity-->
+    <string name="button_skip">Skip</string>
+
+    <!--ResultActivity-->
+    <string name="contentDescription_check">Image check</string>
+    <string name="label_result">Result</string>
+    <string name="text_result">Result:</string>
+    <string name="version_app">v 1.0.0</string>
+
 </resources>
